    * qnap_disks: New check for Hardisks in Qnap devices
    * Dell Open Manage: SNNP Checks for Physical Disks, CPU and Memory
    * check_tcp: Now able to set custom service description
    * FIX: esx_vsphere_counters: added missing ramdisk type upgradescratch
    * FIX: esx_vsphere_hostsystem: fixed bug in handling of params
    * FIX: local: tolerate invalid output lines

    WATO:
    * You can now have site-specific global settings when using
      distributed WATO (available in the "Distributed Monitoring")
    * bulk inventory: display percentage in progress bar
    * New option for full SNMP scan in bulk inventory
    * FIX: correct display of number of hosts in bulk inventory
    * FIX: nailed down ".siteid" exception when added new site

1.2.3i4:
    Core:
    * Create inventory check also for hosts without services, if they
          have *no* ping tag.

    WATO:
    * Bulk inventory: speed up by use of cache files and doing stuff in
          groups of e.g. 10 hosts at once
    * Multisite connection: new button for cloning a connection

    Checks & Agents:
    * Linux agent RPM: remove dependency to package "time". That package
         is just needed for the binary mk-job, which is useful but not
         neccessary.

    Multisite:
    * FIX: fix broken single-site setups due to new caching

1.2.3i3:
    Core:
    * FIX: fixed typo in core startup message "logging initial states"
    * FIX: livestatus table statehist: fixed rubbish entries whenever
           logfile instances got unloaded

    Livestatus:
    * FIX: check_mk snmp checks with a custom check interval no longer
           have an incorrect staleness value

    Notifications:
    * mkeventd: new notification plugin for forwarding notifications
       to the Event Console. See inline docu in share/check_mk/notification/mkeventd
       for documentation.
    * FIX: cleanup environment from notifications (needed for CMC)

    Checks & Agents: