@@ -1,0 +1,27 @@
+title: Apache ActiveMQ Queue lengths
+agents: special datasource
+catalog: os/misc 
+license: GPL
+distribution: check_mk
+description:
+ This check monitors the lenght of ActiveMQ Ques. ActiveMQ is a
+ popular and powerful open source messaging and Integration Patterns server.
+ To get the queue data, you have to configure the special agent: agent_activemq 
+ for querying the information from the server. This can be done easily with 
+ wato -> Datasource Programs. Its also possible to run the agent in piggybag mode.
+ With this mode you can use the piggybag hostname translation to translate the queue names
+ into server names so you can allocate the queues to multipe servers.
+ 
+ After setting up the agent, it is possible to set Warning and Critical levels for the current
+ size of each queue. The check also returns an {Critical} state if the length of the consumerCount is 0.
+ If the queue is a Death Letter queue (DLQ) you should prevent this behavior by setting levels for it.
+
+item:
+ The name of the queue
+
+perfdata:
+  One Grpah for the Enqueue Count and one for the Enqueue Count will be created
+
+inventory:
+ One service will be created for each queue
+
