@@ -37,6 +37,7 @@
     * FIX: esx_vsphere_counters: added missing ramdisk type upgradescratch
     * FIX: esx_vsphere_hostsystem: fixed bug in handling of params
     * FIX: local: tolerate invalid output lines
+    * Apache ActiveMQ: New Special Agent and Check to query ActiveMQ Queues
 
     WATO:
     * You can now have site-specific global settings when using
